rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__exponentiate_op.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT 3^5 AS e\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----+
| e   |
+-----+
| 243 |
+-----+
