rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__format_type_mod.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT format_type(1184, 5);\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------------+
| format_type(Int64(1184),Int64(5)) |
+-----------------------------------+
| timestamp(5) with time zone       |
+-----------------------------------+
