rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__format_type_none.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT format_type(0, NULL);\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------+
| format_type(Int64(0),Utf8(NULL)) |
+----------------------------------+
| -                                |
+----------------------------------+
