rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__format_type_simple.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT format_type(19, NULL);\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------------+
| format_type(Int64(19),Utf8(NULL)) |
+-----------------------------------+
| name                              |
+-----------------------------------+
