rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__formatted_identifier.snap
---
source: cubesql/src/compile/mod.rs
expression: result
---
+----------------------+
| formatted_identifier |
+----------------------+
| column_name          |
+----------------------+
