rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__formatted_identifiers.snap
---
source: cubesql/src/compile/mod.rs
expression: result
---
+-------------------------+
| formatted_identifiers   |
+-------------------------+
| table_name, column_name |
+-------------------------+
